--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,28 +5,32 @@
         <% @first_post.each do |post|  %>
           <%= render "share/archive_preview",:post=>post, :scrollDown=>true%>
         <% end %>
-        <%unless @top_photos.empty? %>
         <div class="span6">
           <div class="text-left">
-            <h4 id="top_photos_title">Фотохроника штурма</h4>
-          </div>
-          <div>
-            <ul class="thumbnails">
-              <% @top_photos.each do |photo| %>
-              <li class="span2">
-                <a href="#" class="thumbnail">
-                  <!--
-                  <img src="examples/55a377c3cbea.jpg" alt="" height="100px">
-                  -->
-                  <%= image_tag photo.image.url(:thumb), :height => "100px" %>
-                </a>
-              </li>
-              <% end %>
+        <%unless @top_photos.empty? %>
+              <h4 id="top_photos_title">Фотохроника штурма</h4>
+            </div>
+            <div>
+              <ul class="thumbnails">
+                <% @top_photos.each do |photo| %>
+                <li class="span2">
+                  <a href="#" class="thumbnail">
+                    <!--
+                    <img src="examples/55a377c3cbea.jpg" alt="" height="100px">
+                    -->
+                    <%= image_tag photo.image.url(:thumb), :height => "100px" %>
+                  </a>
+                </li>
+                <% end %>
 
-            </ul>
+              </ul>
+            </div>
+          </div>
+        <% else %>
+          нет добавленных фотографий в архиве
+        <% end %>
           </div>
         </div>
-        <% end %>
         <div class="pull-right" id="instagram">
           <div class="text-left" style='margin-left:10px'>
             <h4>Записи в Instagram по тегу <a>#9april</a></h4>
