--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -18,7 +18,7 @@
                     <!--
                     <img src="examples/55a377c3cbea.jpg" alt="" height="100px">
                     -->
-                    <a href="<%= image_tag photo.image.url(:large) %>"><%= image_tag photo.image.url(:thumb), :height => "100px" %></a>
+                    <a href="<%= photo.image.url(:large) %>"><%= image_tag photo.image.url(:thumb), :height => "100px" %></a>
                   </a>
                 </li>
                 <% end %>
