--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -14,7 +14,7 @@
               <ul class="thumbnails">
                 <% @top_photos.each do |photo| %>
                 <li class="span2">
-                  <a href="#" class="thumbnail" href="<%= photo.image.url(:large) %>">
+                  <a class="thumbnail" href="<%= photo.image.url(:large) %>">
                     <%= image_tag photo.image.url(:thumb), :height => "100px" %>
                   </a>
                 </li>
