--- a/app/views/pages/photos.html.erb
+++ b/app/views/pages/photos.html.erb
@@ -5,7 +5,7 @@
 	<ul class="thumbnails">
 	  <% @photos.each do |p| %>
 	  <li class="span2">
-	    <a href="<%=p.image.url(:large)%>" class="thumbnail">
+	    <a href="<%=p.image.url(:large)%>" class="thumbnail" rel="photo_archive">
 	      <!--
 	      <img src="examples/55a377c3cbea.jpg" alt="" height="100px">
 	      -->
