--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,5 +58,71 @@
       });
     </script>
 
+    <!--LiveInternet counter--><script type="text/javascript"><!--
+    document.write("<a href='http://www.liveinternet.ru/click;westpress' "+
+    "target=_blank><img src='//counter.yadro.ru/hit;westpress?t14.1;r"+
+    escape(document.referrer)+((typeof(screen)=="undefined"</img
+    ";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
+    screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
+    ";"+Math.random()+
+    "' alt='' title='LiveInternet: показано число просмотров за 24"+
+    " часа, посетителей за 24 часа и за сегодня' "+
+    "border='0' width='88' height='31'><\/a>")
+    //--></script><!--/LiveInternet-->
+
+    <!-- HotLog -->
+    <script type="text/javascript" language="javascript">
+    hotlog_js="1.0";
+    hotlog_r=""+Math.random()+"&s=622278&im=131&r="+escape(document.referrer)+"&pg="+
+    escape(window.location.href);
+    document.cookie="hotlog=1; path=/"; hotlog_r+="&c="+(document.cookie?"Y":"N");
+    </script>
+    <script type="text/javascript" language="javascript1.1">
+    hotlog_js="1.1";hotlog_r+="&j="+(navigator.javaEnabled()?"Y":"N")
+    </script>
+    <script type="text/javascript" language="javascript1.2">
+    hotlog_js="1.2";
+    hotlog_r+="&wh="+screen.width+'x'+screen.height+"&px="+
+    (((navigator.appName.substring(0,3)=="Mic"))?
+    screen.colorDepth:screen.pixelDepth)</script>
+    <script type="text/javascript" language="javascript1.3">hotlog_js="1.3"</script>
+    <script type="text/javascript" language="javascript">hotlog_r+="&js="+hotlog_js;
+    document.write("<a href='http://click.hotlog.ru/?622278' target='_top'><img "+
+    " src='http://hit30.hotlog.ru/cgi-bin/hotlog/count?"+
+    hotlog_r+"&' border=0 width=88 height=31 alt=HotLog><\/a>")
+    </script>
+    <noscript>
+    <noindex><a href="http://click.hotlog.ru/?622278" target="_top" rel="nofollow">
+    <img src="http://hit30.hotlog.ru/cgi-bin/hotlog/count?s=622278&amp;im=131" border="0" 
+     width="88" height="31" alt="HotLog"></a></noindex>
+    </noscript>
+
+
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-10688719-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+    <!-- Yandex.Metrika counter -->
+    <div style="display:none;"><script type="text/javascript">
+    (function(w, c) {
+      (w[c] = w[c] || []).push(function() {
+        try {
+          w.yaCounter1480443 = new Ya.Metrika({id:1480443, enableAll: true});
+        }
+        catch(e) { }
+      });
+    })(window, 'yandex_metrika_callbacks');
+    </script></div>
+    <script src="//mc.yandex.ru/metrika/watch.js" type="text/javascript" defer="defer"></script>
+    <noscript><div><img src="//mc.yandex.ru/watch/1480443" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
+
   </body>
 </html>
