--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,22 +42,7 @@
 
     <div id="footer">
       <div class="container" style="text-align:center">
-        <p class="muted credit"></p>
-      </div>
-    </div>
-
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script>
-      $('#menu').affix()
-
-      $(document).ready(function(){
-        $("a.thumbnail").fancybox();
-      });
-    </script>
-
+        <p class="muted credit">
     <!--LiveInternet counter--><script type="text/javascript"><!--
     document.write("<a href='http://www.liveinternet.ru/click;westpress' "+
     "target=_blank><img src='//counter.yadro.ru/hit;westpress?t14.1;r"+
@@ -123,6 +108,23 @@
     <script src="//mc.yandex.ru/metrika/watch.js" type="text/javascript" defer="defer"></script>
     <noscript><div><img src="//mc.yandex.ru/watch/1480443" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
+        </p>
+      </div>
+    </div>
+
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script>
+      $('#menu').affix()
+
+      $(document).ready(function(){
+        $("a.thumbnail").fancybox();
+      });
+    </script>
+
+
 
   </body>
 </html>
