--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -13,7 +13,12 @@
         <div class="span12">
           <a name="infografika">
             <img alt="Infograf" src="/images/infograf.jpg" width="900px">
-          </a>
+            <BR />
+	    <BR />
+	    <div style="text-align:center">
+	   <img src="http://900igr.net/datai/istorija/SHturm-Kjonigsberga/0003-002-Plan-shturma-Kjonigsberga.png" >
+            </div>
+	   </a>
         </div>
 
         <%unless @another_posts.empty? %>
