--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
             <ul class="nav">
               <li class="<%= 'active' if params[:controller] == 'pages' &&  params[:action] == 'index' %>"><%= link_to "Главная", root_path %></li>
               <li><%= link_to "Инфографика", "/#infografika" %></li>
-              <li class="<%= 'active' if params[:controller] == 'archive' &&  (params[:action] == 'index' or params[:action] == 'detail') %>"><%= link_to "Дневник взятия", archive_path %></li>
+              <li class="<%= 'active' if params[:controller] == 'archive' &&  (params[:action] == 'index' or params[:action] == 'detail') %>"><%= link_to "Дневник штурма", archive_path %></li>
               <li class="<%= 'active' if params[:controller] == 'pages' &&  params[:action] == 'photos' %>"><%= link_to "Фотохроника", photos_path %></li>
               <!--
               <li><%= link_to "Ветераны", veterans_path %></li>
