--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -23,7 +23,7 @@
 
         <%unless @another_posts.empty? %>
         <div class="span6" style="margin-left:0px">
-            <a href="#" name="day_post"><h3 style="color:black" id="arhive_posts_index"><%=t(:arhive_posts_index)%></h3></a>
+            <a href="/archive" name="day_post"><h3 style="color:black" id="arhive_posts_index"><%=t(:arhive_posts_index)%></h3></a>
         </div>
         <div class="day_post">
             <% @another_posts.each do |post|%>
