--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -13,13 +13,16 @@
         <div class="span12">
           <a name="infografika">
             <img alt="Infograf" src="/images/infograf.jpg" width="900px">
+          </a>
             <BR />
-	    <BR />
-	    <div style="text-align:center">
-	   <img src="http://900igr.net/datai/istorija/SHturm-Kjonigsberga/0003-002-Plan-shturma-Kjonigsberga.png" >
+            <div class="pull-left" style="float:left">
+              <img src="/images/map.jpg" width="900px">
             </div>
-	   </a>
+            <div class="pull-right" style="float:left">
+                <p><small>План разгрома кенигсбергской группировки состоял в том, чтобы мощными ударами с севера и юга по сходящимся направлениям рассечь силы гарнизона и штурмом овладеть городом. Для проведения штурмовой операции привлекались войска, входившие в Земландскую группу: 43-я, 50-я, 11-я гвардейская и 39-я армии. Основная роль при штурме города отводилась огню артиллерии всех калибров, включая орудия особой мощности, а также действиям авиации, которая должна была сопровождать войска и полностью деморализовать обороняющегося противника.</small></p>
+            </div>
         </div>
+
 
         <%unless @another_posts.empty? %>
         <div class="span6" style="margin-left:0px">
