--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -19,7 +19,7 @@
               <img src="/images/map.jpg" width="900px">
             </div>
             <div class="pull-right" style="float:left">
-                <p><small>План разгрома кенигсбергской группировки состоял в том, чтобы мощными ударами с севера и юга по сходящимся направлениям рассечь силы гарнизона и штурмом овладеть городом. Штурмовой операции привлекались войска, входившие в Земландскую группу: 43-я, 50-я, 11-я гвардейская и 39-я армии. Основная роль при штурме города отводилась огню артиллерии всех калибров, включая орудия особой мощности, а также действиям авиации, которая должна была сопровождать войска и полностью деморализовать обороняющегося противника.</small></p>
+                <p><small>План разгрома кенигсбергской группировки состоял в том, чтобы мощными ударами с севера и юга по сходящимся направлениям рассечь силы гарнизона и штурмом овладеть городом. Основная роль при штурме города отводилась огню артиллерии всех калибров, включая орудия особой мощности, а также действиям авиации, которая должна была сопровождать войска и полностью деморализовать обороняющегося противника.</small></p>
             </div>
         </div>
 
